test/2-errors/quo-bare.test
{
  'code' : 1,
  'err' : '''\
parse error: test/2-errors/quo-bare.ploy:1:2: expected sub-expression
`
 ^

'''
}
